Header spacing in flexbox

--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <div>
-        <header class="site-header">
+    
+    <header class="site-header">
+        <div class="header-container">
             <a href="#" class="logo">Header Logo</a>
-            <ul class="links">
-                <li><a href="#">header link 1</a></li>
-                <li><a href="#">header link 2</a></li>
-                <li><a href="#">header link 3</a></li>
+            <ul class="list">
+                <li><a href="#" class="link">header link 1</a></li>
+                <li><a href="#" class="link">header link 2</a></li>
+                <li><a href="#" class="link">header link 3</a></li>
             </ul>
-        </header>
-
-    </div>
+        </div>
+    </header>
 
     <div class="section one">
 
