working out header still

--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
     <title>Landing Page</title>
 </head>
 <body>
-    
-    <header class="site-header">
-        <div class="header-container">
-            <a href="#" class="logo">Header Logo</a>
-            <ul class="list">
-                <li><a href="#" class="link">header link 1</a></li>
-                <li><a href="#" class="link">header link 2</a></li>
-                <li><a href="#" class="link">header link 3</a></li>
-            </ul>
-        </div>
-    </header>
+    <div class="header-back">
+        <header class="site-header">
+            <div class="header-container">
+                <a href="#" class="logo">Header Logo</a>
+                <ul class="list">
+                    <li><a href="#" class="link">header link 1</a></li>
+                    <li><a href="#" class="link">header link 2</a></li>
+                    <li><a href="#" class="link">header link 3</a></li>
+                </ul>
+            </div>
+        </header>
+    </div>
 
     <div class="section one">
 
