second section of the page

--- a/index.html
+++ b/index.html
@@ -24,15 +24,23 @@
         </header>
     </div>
 
-    <div class="section one">
+    <div class="section-one">
+        <div class="hero">
+            <h1 class="big"> Big font stuff goes here</h1>
+            <p class="sub">This is some subtext area that will populate with actual text/more info.</p>
+        </div>
+        <div class="image">
+           <div class="placeholder">
+               this is a placeholder for an image
+           </div>
+        </div>
+    </div>
+
+    <div class="section-two">
 
     </div>
 
-    <div class="section two">
-
-    </div>
-
-    <div class="section three">
+    <div class="section-three">
 
     </div>
 
