Second section of the landing page

--- a/index.html
+++ b/index.html
@@ -37,6 +37,25 @@
     </div>
 
     <div class="section-two">
+        <h2 class="section2_title">Some random Information</h2>
+        <div class="box total">
+            <div class="text one">
+                <div class="square one">
+                </div>
+                <div class="subtext one">
+                    some subtext under an illustration or image
+                </div>
+            </div>
+            <div class="square two">
+
+            </div>
+            <div class="square three">
+
+            </div>
+            <div class="square four">
+
+            </div>
+        </div>
 
     </div>
 
