more second section

--- a/index.html
+++ b/index.html
@@ -46,14 +46,26 @@
                     some subtext under an illustration or image
                 </div>
             </div>
-            <div class="square two">
-
+            <div class="text two">
+                <div class="square two">
+                </div>
+                <div class="subtext two">
+                    some subtext under an illustration or image
+                </div>
             </div>
-            <div class="square three">
-
+            <div class="text three">
+                <div class="square three">
+                </div>
+                <div class="subtext three">
+                    some subtext under an illustration or image
+                </div>
             </div>
-            <div class="square four">
-
+            <div class="text four">
+                <div class="square four">
+                </div>
+                <div class="subtext four">
+                    some subtext under an illustration or image
+                </div>
             </div>
         </div>
 
